# woody_woodpacker

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  a.out  oskour.txt
docs/: cat.c  elfArch.md  part0.md  readElf.c  stacks.md
incs/: wpacker.h
libs/libft/: Makefile  Readme.md
libs/libft/incs/: libft.h
libs/libft/incs/libft/: ft_chars.h  ft_fds.h  ft_lst.h  ft_mems.h  ft_nbrs.h  ft_printf.h  ft_strs.h
libs/libft/srcs/ft_chars/: ft_isspace.c  ft_putchar.c
libs/libft/srcs/ft_fds/: ft_putchar_fd.c  get_next_line.c
libs/libft/srcs/ft_lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libs/libft/srcs/ft_nbrs/: ft_atof.c
libs/libft/srcs/ft_printf/: ft_print_c.c  ft_print_nbr.c  ft_print_str.c  ft_printf.c  utils.c
libs/libft/srcs/ft_strs/: ft_putstr.c  ft_strjoin.c  ft_strtrim.c
srcs/: init.c  inject_payload.c  main.c  pack_elf.c  payload.c  prog.cc  read_file.c  write  write.asm
